# cmake-examples-c

./: .gitmodules  README.org
01-basic/A-hello-cmake/: CMakeLists.txt  README.org  main.c
01-basic/B-hello-headers/: CMakeLists.txt  README.org
01-basic/B-hello-headers/include/: Hello.h
01-basic/B-hello-headers/src/: Hello.c  main.c
01-basic/C-static-library/: CMakeLists.txt  README.org
01-basic/C-static-library/src/: Hello.c  main.c
01-basic/D-shared-library/: CMakeLists.txt  README.org
01-basic/D-shared-library/src/: Hello.c  main.c
01-basic/E-installing/: CMakeLists.txt  README.org
01-basic/E-installing/src/: Hello.c  main.c
01-basic/F-build-type/: CMakeLists.txt  README.org  main.c
01-basic/G-compile-flags/: CMakeLists.txt  README.org  main.c
01-basic/H-third-party-library/: CMakeLists.txt  example.json  main.c
